k8s/meta-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-meta-service
spec:
  selector:
    app: influxdb-meta
  ports:
    - name: port-8091
      protocol: TCP
      port: 8091
      targetPort: 8091
    - name: port-8089
      protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
